tests/testcases/errors/BCE0089-4.boo
"""
BCE0089-4.boo(7,15): BCE0089: Type 'Foo' already has a definition for 'bar'.
"""
class Foo:
	bar
	
	interface bar:
		pass
